Bug 367539 - ktexteditor-5.24.0 breaks Kate auto-brackets
Summary: ktexteditor-5.24.0 breaks Kate auto-brackets
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.24.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-19 00:58 UTC by Freddie Witherden
Modified: 2016-08-20 19:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Freddie Witherden 2016-08-19 00:58:44 UTC
After upgrading the packages on my Gentoo system to kde-frameworks/ktexteditor-5.24.0 from 5.23.0 the 'auto brackets' feature in Kate no longer works as expected.

Using Kate (with auto-brackets enabled) and 5.23.0 if one types [ followed by ' the result is:

    ['|']

where a | is used to indicate the position of the caret.  However, after upgrading to 5.24.0 the result becomes:

    ['|]

where the closing ' has not been automatically inserted.  Downgrading to 5.23.0 resolves the issue.  Also observed in 5.25.0.

Reproducible: Always
Comment 1 Sven Brauch 2016-08-19 15:31:23 UTC
Apparently I have broken this, yeah ... will look.
Comment 2 Sven Brauch 2016-08-20 19:13:13 UTC
Git commit 4269c30acacc80113e798784341b0b7638ebcf71 by Sven Brauch.
Committed on 20/08/2016 at 19:11.
Pushed by brauch into branch 'master'.

autobrace: look at spellcheck attribute where the character was entered

... instead of behind it. Should fix this bug:

M  +1    -1    src/document/katedocument.cpp

http://commits.kde.org/ktexteditor/4269c30acacc80113e798784341b0b7638ebcf71