autobrace: look at spellcheck attribute where the character was entered

... instead of behind it. Should fix this bug:
BUG:367539