src/document/katedocument.cpp
@@ -2976,7 +2976,7 @@ bool KTextEditor::DocumentPrivate::typeChars(KTextEditor::ViewPrivate *view, con
          */
         bool skipAutobrace = closingBracket == QLatin1Char('\'');
         if ( highlight() && skipAutobrace ) {
-            auto context = highlight()->contextForLocation(this, view->cursorPosition());
+            auto context = highlight()->contextForLocation(this, view->cursorPosition() - Cursor{0, 1});
             // skip adding ' in spellchecked areas, because those are text
             skipAutobrace = !context || highlight()->attributeRequiresSpellchecking(context->attr);
         }
